--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
     
     <div class="game-container floating">
         <div class="header floating-delay-1">
-            <h1><i class="fas fa-stars"></i> Cosmic Dots & Boxes</h1>
+            <h1><i class="fas fa-stars"></i> Janna aur Billo Khalenge Game 💖</h1>
             <p>Real-Time Multiplayer - Conquer the stars with friends!</p>
         </div>
         
